Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24479

Wrong selection color for syntax highlighting

XMLWordPrintable

    • Windows
    • 3b23cab38579ab719e5aa7726c2007b9cb040f1e (qt-creator/qt-creator/4.13)

      The Selection background color in c++ code editor doesn't match to the setup in the current Code Color Scheme, but it is the same as the whole qt creator color for selection.

        1. image-2020-09-09-13-15-10-606.png
          65 kB
          Mladen
        2. S_qt.png
          39 kB
          Alex Nevskiy
        For Gerrit Dashboard: QTCREATORBUG-24479
        # Subject Branch Project Status CR V

            davschul David Schulz
            alexnevskiy Alex Nevskiy
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes