TextEditor: Use selection format from the setting

Overwrites the format generated by QPlainTextEdit::getPaintContext()

Amends 9182d4eda75033bbbebf50e87e518adc33d499f6.

Fixes: QTCREATORBUG-24479
Change-Id: Ia226a74442dbbdbae42e8da5dee9e4d7399b677c
Reviewed-by: Orgad Shaneh <orgads@gmail.com>